src/css/main.css
:root {
    --primary-clr: #3378d3;
    --font-clr: #1d1d1d;
    --inverse-font-clr: #fff;
    --secondary-bg-clr: #fafafa;
    --footer-bg-clr: #ececec;
    --header-font: 'Fjalla One', sans-serif;
    --max-content-width: 700px;
}

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
    background: #212020;
}

::-webkit-scrollbar-thumb {
    background: #888;
}

body {
    padding: 0px;
    margin: 0px;
    color: var(--font-clr);
    font-family: 'Work Sans', sans-serif;
    font-weight: 300;
    font-size: 21px;
}

blockquote {
    border-left: 4px solid var(--primary-clr);
    font-style: italic;
    font-size: 1.3rem;
    padding: 1px 10px;
    margin: 10px 0px;
    background-color: var(--secondary-bg-clr);
}

blockquote p {
    margin: 6px 2px;
}

hr {
    border: 0.5px solid #ddd;
}

button {
    font-family: var(--header-font);
    font-size: 1.1rem;
    padding: 5px 10px;
    background-color: var(--primary-clr);
    color: var(--inverse-font-clr);
    border: none;
    cursor: pointer;
}

.base-container {
    display: flex;
    flex: 1 auto;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;
}

.header-container {
    display: flex;
    flex-direction: row;
    height: 60px;
    background-color: var(--secondary-bg-clr);
    align-items: center;
}

.site-header {
    display: flex;
    padding: 5px 15px;
    width: 100%;
    justify-content: space-between;
    align-items: center;
}

.header-circle {
    display: inline-block;
    position: relative;
    height: 40px;
    width: 40px;
    background-color: #000;
    border-radius: 50%;
}
.header-circle:hover {
    background-color: var(--primary-clr);
}

.header-logo {
    display: inline-block;
    font-family: var(--header-font);
    font-size: 1.3rem;
    text-decoration: none;
    color: #fff;
    line-height: 40px;
    vertical-align: baseline;
    text-align: center;
    transform: translate(54%, 2%);
}

.header-link {
    padding: 2px 5px;
    text-decoration: none;
    font-size: 1.2em;
    color: var(--font-clr);
}

.header-link:hover {
    text-decoration: underline;
    color: var(--primary-clr);
}

.main-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    flex-grow: 1;
}

.homepage-header {
    text-align: center;
}

.homepage-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-grow: 1;
}

.homepage-tagline {
    padding: 2px 20px;
    text-align: center;
}

.social-links {
    display: flex;
    justify-content: space-around;
    font-size: 1.5em;
}

.social-link {
    color: var(--font-clr);
}

.social-link:hover {
    color: var(--primary-clr);
}

.footer-container {
    display: flex;
    height: 50px;
    background-color: var(--footer-bg-clr);
    justify-content: center;
}

.footer-text {
    font-size: 1rem;
    font-weight: 300;
}

.footer-text a {
    color: var(--primary-clr);
}

.haiku-header {
    font-size: 2.5rem;
    margin-bottom: 10px;
}

.haiku-nav {
    display: flex;
    justify-content: center;
    margin-bottom: 15px;
}

.haiku-body {
    padding: 5px;
    font-size: 1.5rem;
}

.haiku-grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    background-color: var(--secondary-bg-clr);
}

.haiku-grid-item {
    margin: 15px 10px;
    font-size: 2.5rem;
}

.haiku-grid-item a {
    color: var(--font-clr);
    text-decoration-color: var(--primary-clr);
    text-underline-offset: 5px;
}

.haiku-grid-item a:hover {
    color: var(--primary-clr);
}

.project-list {
    max-width: var(--max-content-width);
    padding: 5px 10px;
}

.project-list-title {
    display: block;
    font-size: 1.4em;
    font-weight: 400;
    padding-top: 4px;
    text-decoration: none;
    color: var(--font-clr);
}

.project-list-summary {
    margin: 5px 0px 20px 0px;
}

.project-list-hr {
    border: 0.5px solid #ddd;
}

.project-list-title:hover {
    color: var(--primary-clr);
}

.project-list-date {
    font-size: 0.9rem;
    font-style: italic;
    padding: 4px 0px;
    margin: 0px;
}

.project-header {
    margin-bottom: 2px;
}

.project-header-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.project-date {
    font-size: 0.9rem;
    font-style: italic;
    margin: 8px 0px;
}

.project-read-time-inline {
    padding-left: 10px;
}

.project-content {
    display: block;
    padding: 5px 10px;
    max-width: var(--max-content-width);
}

.project-tag-group {
    display: flex;
    width: 100%;
    justify-content: flex-start;
}

.post-content {
    display: block;
    padding: 5px 10px;
    max-width: var(--max-content-width);
}

h1,
h2,
h3,
h4 {
    font-family: var(--header-font);
}

.navbar {
    display: flex;
    justify-content: space-between;
    width: 320px;
    align-items: center;
}

.navbar a {
    font-size: 2.5em;
    color: var(--primary-clr);
}

.navbar a.inactive {
    cursor: not-allowed;
    color: #888;
}

.writings-table {
    padding: 0px;
    margin: 20px 0px 0px 0px;
    border-collapse: collapse;
}

.writings-table-link {
    color: var(--font-clr);
    font-weight: 400;
    font-size: 1.3rem;
    text-decoration: none;
}

.writings-table-link:hover {
    color: var(--primary-clr);
    text-decoration: solid;
}

.writings-table th {
    font-size: 1.3rem;
    font-weight: 300;
    padding-bottom: 15px;
    text-align: left;
    border-bottom: 1px solid var(--primary-clr);
}

.writings-table td {
    padding: 15px 0px;
    vertical-align: top;
}

.writings-table td:not(:first-child),
.writings-table th:not(:first-child) {
    padding-left: 20px;
}

.poem-body {
    padding: 5px 10px;
}

.contact-form textarea {
    border: 1px solid #ccc;
    width: 100%;
    height: 100px;
    font-size: 1.2rem;
}

.contact-form input {
    border: 1px solid #ccc;
    height: 1.5rem;
    font-size: 1.2rem;
    color: var(--font-clr);
}

.video-responsive {
    overflow: hidden;
    padding-bottom: 56.25%;
    position: relative;
    height: 0;
}
.video-responsive iframe {
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
}

.mobile-menu {
    display: none;
    flex-direction: column;
    background-color: var(--footer-bg-clr);
    border-top: 0.5px solid #ccc;
    border-bottom: 0.5px solid #ccc;
    overflow-y: hidden;
    height: 0px;
}

.hamburger-menu {
    display: none;
}

.visually-hidden {
    position: absolute;
    left: -100vw;
}

.mobile-menu-show {
    height: auto;
}

.tag-table td {
    padding: 10px 5px;
    vertical-align: top;
}

.tag-table-link {
    font-size: 1.5rem;
    font-weight: 400;
    text-decoration: none;
    color: var(--font-clr);
}
.tag-table-link:hover {
    color: var(--primary-clr);
    text-decoration: underline;
}

.tag-list li {
    padding: 2px;
}

.tag-pill {
    display: inline-block;
    border: 1px solid var(--primary-clr);
    background-color: var(--primary-clr);
    color: var(--inverse-font-clr);
    padding: 4px 8px;
    margin: 4px;
    white-space: nowrap;
    text-decoration: none;
    font-size: 1rem;
    border-radius: 4px;
}

.tag-pill:hover {
    text-decoration: underline;
}

.tweet-link {
    color: var(--inverse-font-clr);
    background-color: var(--primary-clr);
    padding: 4px 8px;
    font-size: 0.9rem;
    border-radius: 4px;
    text-decoration: none;
}

@media screen and (max-width: 480px) {
    .haiku-body {
        font-size: 1rem;
    }
    .hamburger-menu {
        display: block;
    }
    .header-links {
        display: none;
    }
    .mobile-menu {
        display: flex;
    }
}

@media screen and (max-width: 700px) {
    .poem-body {
        font-size: 0.9rem;
    }

    .poem-body pre {
        white-space: pre-line;
    }
}

